Create ventas-core